<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_sort"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/sort"
        android:visible="true"
        app:showAsAction="always" >
        <menu>
            <item
                android:id="@+id/sortTitle"
                android:title="@string/sort_title"/>
            <item
                android:id="@+id/sortName"
                android:title="@string/sort_country"/>
            <item
                android:id="@+id/sortRating"
                android:title="@string/sort_rating"/>
            <item
                android:id="@+id/sortTime"
                android:title="@string/sort_time"/>
        </menu>
    </item>
    <item
        android:id="@+id/menu_filter"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/filter"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />
</menu>